--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-    "name": "fe-deploy-cli",
-    "version": "1.0.2",
+    "name": "project_build",
+    "version": "1.0.0",
     "description": "A cli tool for web deploy.",
     "bin": {
         "deploy": "./bin/index.js"
@@ -17,7 +17,7 @@
     },
     "repository": {
         "type": "git",
-        "url": "https://github.com/dadaiwei/fe-deploy-cli"
+        "url": "https://github.com/dadaiwei/project_build"
     },
     "dependencies": {
         "archiver": "^3.1.1",
